wrote services, models, entities

--- a/sportscenter/src/main/resources/application.yml
+++ b/sportscenter/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url:
-    username:
-    password:
+    url: jdbc:mysql://localhost:3307/sports-center
+    username: root
+    password: password
   application:
     name: SportsCenter
   jobs:
